--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 creational/01.factory/node_modules
 creational/02.abstract-factory/node_modules
 creational/03.test-data-builder-object-mother/node_modules
+behavioral/01.strategy/node_modules
