--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ creational/01.factory/node_modules
 creational/02.abstract-factory/node_modules
 creational/03.test-data-builder-object-mother/node_modules
 behavioral/01.strategy/node_modules
+behavioral/02.observer/node_modules
+behavioral/02.observer/coverage
