--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-creational/01.factory/node_modules
-creational/02.abstract-factory/node_modules
-creational/03.test-data-builder-object-mother/node_modules
-behavioral/01.strategy/node_modules
-behavioral/02.observer/node_modules
-behavioral/02.observer/coverage
-behavioral/03.template-method/node_modules
-behavioral/03.template-method/coverage
-behavioral/04.decorator-middleware/node_modules
-behavioral/04.decorator-middleware/coverage
+part-01/*/*/node_modules
+part-01/*/*/coverage
+part-02/*/*/node_modules
+part-02/*/*/coverage
